public/stylesheets/master.css
@import url("reset.css");
@import url("text.css");

#items {
  list-style: none;
}

#items li {
  border: 1px solid #aaa;
  padding: 5px;
  font-size: 1.2em;
}

#items li.focus {
  font-size: 1.5em;
  background-color: rgb(250, 253, 210);
}

#items li.focus span.subject{
  font-size: 1.5em;
  display: block;
  font-weight: bold;
  letter-spacing: -0.1;
}

#items li.focus div.actions {
/*  float: right;*/
}

#items li.focus a.accept {
  color: #36993B;
  padding-right: 10px;
}
#items li.focus a.reject {
  color: #B81104;
}

.accepted {
  background: #D2F8B0;
}

.state {
  color: #aaa;
  padding-right: 10px;
}

.highlight {
  background-color: rgb(250, 253, 210);
  text-decoration: none;
}

h2 {
  color: #AAA;
}

h2 a {
  color: #555;
}

h2 #count, h2 #new_count, h2 #accepted_count, h2 #rejected_count {
  font-size: 1.5em;
}

#shallow ul {
  list-style: none;
}

#shallow ul > li.group {
  border: 1px solid #666;
  border-top: 0;
  margin-right: 5px;
  padding: 3px;
}

#shallow ul li.atom {
/*  border-top: 1px solid #999;*/
  background-color: rgb(250, 253, 210);
  margin: 0 5px;
}

#shallow ul > li.group > span.kind {
  font-weight: bold;
}

#shallow ul span.kind {
  padding: 0 3px;
}

#shallow ul li.atom span.kind {
  font-weight: bold;
}

#shallow ul li {
  display: inline;
  line-height: 2;
  margin: 0px;
}

#shallow ul ul {
  display: inline;
}

#stanford ul {
  margin: 0;
  list-style: none;
  border-left: 1px solid #888;
}

#stanford ul li {
  margin-left: 5px;
}

